# heat_islands_workflow

./: .env.example  .gitignore  costa_rica.ipynb  pyproject.toml  test.ipynb
heat_islands_workflow/: definitions.py  managers.py  partitions.py  resources.py
heat_islands_workflow/assets/: bounds.py  common.py  polygons.py  stats.py
heat_islands_workflow/assets/raster/: __init__.py  common.py  monthly.py  suhi.py  world_cover.py
heat_islands_workflow/defs/: managers.py  partitions.py  resources.py
heat_islands_workflow/defs/assets/: bounds.py  common.py  polygons.py  stats.py
heat_islands_workflow/defs/assets/raster/: lst.py  region_temp.py  suhi.py  world_cover.py
