[project]
name = "heat-islands-workflow"
version = "0.1.0"
description = ""
authors = [
    {name = "RodolfoFigueroa",email = "4rodolfofigueroa2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dagster (>=1.10.6,<2.0.0)",
    "dagster-webserver (>=1.10.6,<2.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "heat_islands_workflow.definitions"
code_location_name = "heat_islands_workflow"

[tool.basedpyright]
typeCheckingMode = "standard"
ignore = ["**/*.ipynb"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "PLR2004"]
