[project]
name = "heat-islands-workflow"
version = "0.1.0"
description = ""
authors = [
    {name = "RodolfoFigueroa",email = "4rodolfofigueroa2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "contextily>=1.7.0",
    "dagster>=1.12.19",
    "dagster-dg-cli>=1.12.19",
    "dagster-webserver>=1.12.19",
    "earthengine-api>=1.7.17",
    "geedim>=2.0.0",
    "geemap>=0.37.1",
    "geopandas>=1.1.3",
    "ipykernel>=6.31.0",
    "pandas-stubs>=3.0.0.260204",
    "psycopg2>=2.9.11",
    "rasterio>=1.5.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.48",
    "types-geopandas>=1.1.3.20260311",
]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "heat_islands_workflow"
registry_modules = [
    "heat_islands_workflow.defs.assets.*",
    "heat_islands_workflow.defs.managers",
    "heat_islands_workflow.defs.resources"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812"]
